--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.69.4",
+    "react-native-blob-util": "^0.18.3",
     "react-native-fast-image": "^8.6.3",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-navigation": "7.33.3-hotfix.3",
